adaptive styles implemented

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <ul class="team-content">
                     <li class="item">
 
-                        <img src="./img/person1.jpg" alt="Mark Guerrero" width="264">
+                        <img srcset="./img/person1-2x.jpg 2x" src="./img/person1.jpg" alt="Mark Guerrero" width="264">
                         <div class="card">
                             <h3 class="name">Mark Guerrero</h3>
 
@@ -203,7 +203,7 @@
 
                     <li class="item">
 
-                        <img src="./img/person2.jpg" alt="Tom Ford" width="264">
+                        <img srcset="./img/person2-2x.jpg 2x" src="./img/person2.jpg" alt="Tom Ford" width="264">
                         <div class="card">
                             <h3 class="name">Tom Ford</h3>
                             <p class="team-position">Frontend Developer</p>
@@ -251,7 +251,7 @@
 
                     <li class="item">
 
-                        <img src="./img/person3.jpg" alt="Camila Garcia" width="264">
+                        <img srcset="./img/person3-2x.jpg 2x" src="./img/person3.jpg" alt="Camila Garcia" width="264">
                         <div class="card">
                             <h3 class="name">Camila Garcia</h3>
                             <p class="team-position">Marketing</p>
@@ -290,7 +290,7 @@
 
                     <li class="item">
 
-                        <img src="./img/person4.jpg" alt="Daniel Wilson" width="264">
+                        <img srcset="./img/person4-2x.jpg 2x" src="./img/person4.jpg" alt="Daniel Wilson" width="264">
                         <div class="card">
                             <h3 class="name">Daniel Wilson</h3>
                             <p class="team-position">UI Designer</p>
@@ -384,7 +384,7 @@
 
     </main>
 
-    <!-- <footer>
+    <footer>
         <div class="footer container">
             <div class="footer-box">
                 <a href="./index.html" class="footer-logo">WEB<span class="logo-footer">STUDIO</span></a>
@@ -446,7 +446,7 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal  -->
     <!-- <div class="backdrop is-hidden" data-modal>
