--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="item"><a href="tel:+110001111111" class="nav-address">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
-            <button type="button" class="menu-open-btn">
+            <button type="button" class="menu-open-btn" data-menu-open>
                 <svg class="menu-open-icon">
                     <use href="./img/icons.svg#menu"></use>
                 </svg>
@@ -54,7 +54,62 @@
 
         </div>
 
+        <div class="mob-menu is-hidden" data-menu>
 
+            <div class="container">
+                <div>
+                    <button class="menu-close" data-menu-close>
+                        <svg class="close-icon" width="8" height="8">
+                            <use href="./img/icons.svg#close"></use>
+                        </svg>
+                    </button>
+                    <ul class="mob-menu-list">
+                        <li class="mob-menu-item "><a href="./index.html" class="mob-menu-link">Studio</a></li>
+                        <li class="mob-menu-item"><a href="./portfolio.html" class="mob-menu-link">Portfolio</a></li>
+                        <li class="mob-menu-item"><a href="#" class="mob-menu-link contacts">Contacts</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <a href="tel:+110001111111" class="mob-menu-tel">+11 (000) 111-11-11</a>
+                    <a href="mailto:info@devstudio.com" class="mob-menu-mail">info@devstudio.com</a>
+
+
+
+                    <ul class="mob-soc-links">
+                        <li class="mob-soc-item"><a href="#" class="icon-wrap">
+                                <svg class="network-footer">
+                                    <use href="./img/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+
+                        </li>
+                        <li class="mob-soc-item"><a href="#" class="icon-wrap">
+                                <svg class="network-footer">
+                                    <use href="./img/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+
+                        </li>
+                        <li class="mob-soc-item"><a href="#" class="icon-wrap">
+                                <svg class="network-footer">
+                                    <use href="./img/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+
+                        </li>
+                        <li class="mob-soc-item"><a href="#" class="icon-wrap">
+                                <svg class="network-footer">
+                                    <use href="./img/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
 
     </header>
 
@@ -449,7 +504,7 @@
     </footer>
 
     <!-- Modal  -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="data-modal-close" data-modal-close>
                 <svg class="modal-close-icon" width="8" height="8">
@@ -512,10 +567,11 @@
 
             </form>
         </div>
-    </div> -->
+    </div>
 
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
